vlib/v/checker/tests/index_sumtype_or_interface_params_err.out
vlib/v/checker/tests/index_sumtype_or_interface_params_err.vv:6:9: error: type `Foo` does not support indexing
    4 | 
    5 | fn sum_type_or_interface_as_parameters(mut foo Foo, mut bar Bar) {
    6 |     _ = foo[0]
      |            ~~~
    7 |     _ = bar[0]
    8 | }
vlib/v/checker/tests/index_sumtype_or_interface_params_err.vv:7:9: error: type `Bar` does not support indexing
    5 | fn sum_type_or_interface_as_parameters(mut foo Foo, mut bar Bar) {
    6 |     _ = foo[0]
    7 |     _ = bar[0]
      |            ~~~
    8 | }
