vlib/v/checker/tests/index_sumtype_or_interface_params_err.vv
type Foo = int | map[int]int

interface Bar {}

fn sum_type_or_interface_as_parameters(mut foo Foo, mut bar Bar) {
	_ = foo[0]
	_ = bar[0]
}
